Double updates of world and material texture settings #41604

Closed
opened 2014-08-27 22:22:02 +02:00 by Alexey · 5 comments

System Information
Operating system and graphics card

Blender Version
Broken: (2.68-2.71.3)
Worked: (2.67 and all earlier)

Short description of error
This bug take place in all versions with rendered shading mode in BI(in cycles working normal)
This is unnecessary load and speed\performance fade.

Create any object, material, texture(type - is not important) and set influence for diffuse and bump or others.(texture settings and influence settings is not important, but i was use clouds with maximum depth(24) and so small size(0.05), because we will have some fade of speed and have time to see double updates)
select rendered shading mode, try to change anything look closely on this
rendered.png
close or open preview - is not important.
go to world panel and try to change anything(and we will see double update) maybe without textures.
if we use world texture and change - error is active.

if we use 2.71.3:
working with this error too.
if we use image or movie, go to paint mode and try to paint anything - we have double update.(in versions 2.71 and all earlyer with rendered shading mode we was have another error: don't update image when painting in rendered shading mode, to update we must zoom in or out, but this bug was fixed in 2.71.3) and we have double update again...

P.S. Try to change view vector(press MMB and grab with or without shift button, zoom in or out, 1-9 in numpad) we will have only one update.
try to change material settings - working normal(we have one update in material preview and one in 3d view)
try to use texture or material with nodes and change anything - working properly(one update for node viewers, one for preview in tex setting panel of property window one else for 3d view)

But if we change in prwview look on texture/material(world)/both we have one update in 3d view(i think it is unnecessary) and one (properly) update in preview
preview.png

Exact steps for others to reproduce the error
open this{F107048} and select rendered shading mode
1)change anything in this texture, look closely and we will see double update.(work with error)
2)try to change look vector(1-9 numpad, zoom in or out) and we will see one update.(working normal)
3)go to material settings, change anything. one update, working normal.
4)go to world settings panel, change anything, double update,work with error.
(we can switch on more settings(AO for example) to create load and fade speed - we will have time to see double update, else work will be too fast and we will not see double update )
5)use this texture for world, and delete this tex from material(or delete material), change settings - double update, work with error.

**System Information** Operating system and graphics card **Blender Version** Broken: (2.68-2.71.3) Worked: (2.67 and all earlier) **Short description of error** This bug take place in all versions with rendered shading mode in BI(in cycles working normal) This is unnecessary load and speed\performance fade. Create any object, material, texture(type - is not important) and set influence for diffuse and bump or others.(texture settings and influence settings is not important, but i was use clouds with maximum depth(24) and so small size(0.05), because we will have some fade of speed and have time to see double updates) select rendered shading mode, try to change anything look closely on this ![rendered.png](https://archive.blender.org/developer/F107045/rendered.png) close or open preview - is not important. go to world panel and try to change anything(and we will see double update) maybe without textures. if we use world texture and change - error is active. if we use 2.71.3: working with this error too. if we use image or movie, go to paint mode and try to paint anything - we have double update.(in versions 2.71 and all earlyer with rendered shading mode we was have another error: don't update image when painting in rendered shading mode, to update we must zoom in or out, but this bug was fixed in 2.71.3) and we have double update again... P.S. Try to change view vector(press MMB and grab with or without shift button, zoom in or out, 1-9 in numpad) we will have only one update. try to change material settings - working normal(we have one update in material preview and one in 3d view) try to use texture or material with nodes and change anything - working properly(one update for node viewers, one for preview in tex setting panel of property window one else for 3d view) But if we change in prwview look on texture/material(world)/both we have one update in 3d view(i think it is unnecessary) and one (properly) update in preview ![preview.png](https://archive.blender.org/developer/F107052/preview.png) **Exact steps for others to reproduce the error** open this{[F107048](https://archive.blender.org/developer/F107048/doble_update.blend)} and select rendered shading mode 1)change anything in this texture, look closely and we will see double update.(work with error) 2)try to change look vector(1-9 numpad, zoom in or out) and we will see one update.(working normal) 3)go to material settings, change anything. one update, working normal. 4)go to world settings panel, change anything, double update,work with error. (we can switch on more settings(AO for example) to create load and fade speed - we will have time to see double update, else work will be too fast and we will not see double update ) 5)use this texture for world, and delete this tex from material(or delete material), change settings - double update, work with error.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-08-27 22:22:02 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Alexey was unassigned by Bastien Montagne 2014-08-28 08:41:41 +02:00

This issue was referenced by 3a200d66ae

This issue was referenced by 3a200d66ae8c8b89aad83009bf6edcc6c1a92263

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3a200d66ae.

Closed by commit 3a200d66ae.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41604
No description provided.